fix(layout): remove double-scrollbar in validation pane
Refs #3625

--- a/src/plugins/layout/components/Layout/_layout.scss
+++ b/src/plugins/layout/components/Layout/_layout.scss
@@ -68,7 +68,7 @@
     }
 
     .swagger-editor__validation-pane {
-      overflow-y: auto;
+      overflow-y: hidden;
       max-height: 120px;
     }
 
